--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -1,9 +1,6 @@
-# spacy==2.2.4
-# spacy>=2.2.0,<3.0.0
-# https://github.com/explosion/spacy-models/releases/download/nb_core_news_sm-2.3.0/nb_core_news_sm-2.3.0.tar.gz#egg=nb_core_news_sm
-# https://github.com/explosion/spacy-models/releases/download/nb_core_news_sm-2.2.5/nb_core_news_sm-2.2.5.tar.gz#egg=nb_core_news_sm
-# nltk>=3.5
 Flask==1.1.2
 flask-cors==3.0.8
+# The Stanford NLP Group's official Python NLP library. It contains support for running various accurate natural language processing tools on 60+ languages and for accessing the Java Stanford CoreNLP software from Python.
+stanza==1.0.1
 # ------------------------------------------------------------------
 uWSGI==2.0.19.1
